[package]
name = "core-media"
description = "Safe bindings to CoreMedia framework"
homepage = "https://github.com/libark/core-media-rs"
repository = "https://github.com/libark/core-media-rs"
documentation = "https://docs.rs/core-media"
version = "0.4.0"
authors = ["Zhou Wei <zhouwei@ehom.net>"]
license = "MIT OR Apache-2.0"
categories = ["multimedia", "os::macos-apis"]
keywords = ["coremedia"]
edition = "2018"

[dependencies]
block = "0.1"
cfg-if = "1.0"
core-audio-types = "0.1"
core-foundation = { version = "0.9", default-features = false }
core-graphics2 = { version = "0.1", default-features = false }
core-video = { version = "0.3", default-features = false }
libc = "0.2"
objc2 = { version = "0.5", optional = true }

[features]
default = ["link"]
link = ["core-foundation/link", "core-graphics2/link", "core-video/link"]
objc = ["objc2"]

[package.metadata.docs.rs]
no-default-features = true
features = ["objc"]
default-target = "x86_64-apple-darwin"
targets = [
    "x86_64-apple-darwin",
    "x86_64-apple-ios",
    "aarch64-apple-darwin",
    "aarch64-apple-ios",
]
